# persona-5-tradu-o

./: .gitignore  COMECE-AQUI.md  DISCLAIMER.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  installer.yml
docs/: 01-instalacao.md  02-extrair-do-jogo.md  03-fluxo-traducao.md  04-fontes-acentos.md  05-testar-no-jogo.md  06-guia-de-revisao.md
glossary/: glossario.pt-br.csv  guia-de-estilo.md  vozes-personagens.md
installer/: README.md  run_installer.py
installer/p5r_ptbr_installer/: __init__.py  __main__.py  reloaded.py  steam.py  wizard.py
mod/: ModConfig.json  README.md
src/p5r_ptbr/: __init__.py  assist.py  build_mod.py  build_units.py  cli.py  extract.py  glossary.py  memory.py  msg_format.py  package_mod.py  qa.py  units.py
tests/: test_glossary.py  test_memory.py  test_msg_format.py  test_qa.py  test_reloaded.py  test_steam.py  test_units.py
tests/fixtures/: exemplo.msg
tools/: README.md  bootstrap.ps1  bootstrap.sh
translation/: .gitkeep
